k8s/03-kidneytransplant-forum-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kidneytransplant-forum-service
  namespace: pediatric
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kidneytransplant-forum-service
  template:
    metadata:
      labels:
        app: kidneytransplant-forum-service
    spec:
      containers:
      - name: kidneytransplant-forum-service
        image: sirine215/pediatric-kidneytransplant-forum-service:latest
        ports:
        - containerPort: 8091
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8091
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8091
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kidneytransplant-forum-service
  namespace: pediatric
spec:
  selector:
    app: kidneytransplant-forum-service
  ports:
  - port: 8091
    targetPort: 8091
  type: ClusterIP
